<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:padding="8dp"
  android:orientation="horizontal">

  <ImageView
    android:id="@+id/id_iv_step_picture"
    android:layout_width="67dp"
    android:layout_height="66dp"
    app:srcCompat="@drawable/ic_placeholder" />

  <ImageView
      android:id="@+id/handle"
      android:layout_width="?listPreferredItemHeight"
      android:layout_height="match_parent"
      android:layout_gravity="center_vertical|right"
      android:scaleType="center"
      android:src="@drawable/ic_reorder_black_24dp" />

  <TextView
    android:id="@+id/id_tv_step_name"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="0.20"
    android:gravity="center"
    android:text="Step name"
    android:textSize="24sp" />

  <ImageButton
    android:id="@+id/id_remove_step"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:src="@drawable/ic_delete_black_24dp" />

</LinearLayout>
