<layout>
  <data>
    <variable
      name="stepListEvents"
      type="pg.autyzm.friendly_plans.manager_app.view.step_list.StepListEvents"/>
  </data>

  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <LinearLayout
      android:id="@+id/id_nav_bar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:weightSum="1">

      <TextView
        android:id="@+id/id_tv_step_list_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.00"
        android:text="@string/steps_list_info"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
      <Button
        android:id="@+id/id_btn_create_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="@{stepListEvents::eventCreateStep}"
        android:text="@string/create_step"/>

      <Button
          android:id="@+id/id_btn_next"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:onClick="@{stepListEvents::eventSaveAndFinish}"
          android:text="@string/save" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/rv_step_list"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginLeft="8dp"
      android:layout_marginRight="8dp"
      android:layout_alignParentEnd="true"
      android:layout_below="@+id/id_nav_bar"
      android:scrollbars="vertical"
      tools:listitem="@layout/item_step">
    </androidx.recyclerview.widget.RecyclerView>

  </RelativeLayout>
</layout>