...
  <string name="plan_removal_confirmation_title">Potwierdzenie usunięcia planu</string>
  <string name="plan_removal_confirmation_message">Czy jesteś pewien, że chcesz usunąć ten plan?</string>
  <string name="child_removal_confirmation_negative_button">Nie</string>
  <string name="child_removal_confirmation_positive_button">Tak, usuń profil dziecka</string>
  <string name="child_removal_confirmation_title">Potwierdzenie usunięcia profilu dziecka</string>
  <string name="child_removal_confirmation_message">Czy jesteś pewien, że chcesz usunąć wybrany profil dziecka?</string>
  <string name="step_removal_confirmation_negative_button">Nie</string>
  <string name="step_removal_confirmation_positive_button">Tak, usuń składową zadania</string>
  <string name="step_removal_confirmation_title">Potwierdzenie usunięcia składowej zadania</string>
  <string name="step_removal_confirmation_message">Czy jesteś pewien, że chcesz usunąć składową zadania?</string>
  <string name="task_cannot_be_removed">Element nie może zostać usunięty</string>
  <string name="task_cannot_be_removed_message">Elemnt nie może zostać usunięty, ponieważ jest przypisany do planu: </string>
  <string name="task_cannot_be_removed_dialog_close_button">Zamknij</string>
  <string name="task_with_steps_saved_message">Zadanie szczególowe zapisane</string>
...
