...
            android:id="@+id/id_tv_plan_name_label"
            android:layout_column="0"
            android:text="@string/plan_name" />

          <!--Plan name -->
          <EditText
            android:id="@+id/id_et_plan_name"
            android:layout_column="1"
            android:cursorVisible="true"
            android:inputType="text"
            android:minWidth="200dp"
            android:text="@={planData.planName}"
            tools:text="This is plan name." />
...
